--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 theme: jekyll-theme-cayman
-title: [Robust Time Series Analysis and Applications: An Industrial Perspective]
+title: "Robust Time Series Analysis and Applications: An Industrial Perspective"
 description: [KDD 2022 Tutorial, by Qingsong Wen, Linxiao Yang, Tian Zhou, and Liang Sun]
+tagline:      A tutorial at KDD 2021
+
+
 
