--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,3 @@
+title: [Robust Time Series Analysis and Applications: An Industrial Perspective]
+description: [KDD 2022 Tutorial]
 theme: jekyll-theme-cayman
-title: "Robust Time Series Analysis and Applications: An Industrial Perspective"
-description: >- # this means to ignore newlines until "baseurl:"
- A tutorial at KDD 2022
-#baseurl: "" # the subpath of your site, e.g. /blog
-#url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username: qingsongedu
