--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: "Robust Time Series Analysis and Applications: An Industrial Perspective"
-description: "KDD 2022 Tutorial"
+description: "[KDD 2022](https://kdd.org/kdd2022/) Tutorial"
 theme: jekyll-theme-cayman
