--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 
-description: "KDD 2022 Tutorial"
+description: "KDD 2022 Tutorial, from Qingsong Wen, Linxiao Yang, Tian Zhou, and Liang Sun."
 title: "Robust Time Series Analysis and Applications: An Industrial Perspective"
 theme: jekyll-theme-cayman
