--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,10 @@
+title: "Robust Time Series Analysis and Applications<br/>
+An Industrial Perspective"
 
-description: "KDD 2022 Tutorial, <br/>
-from Qingsong Wen, Linxiao Yang, Tian Zhou, and Liang Sun."
 
-title: "Robust Time Series Analysis and Applications: An Industrial Perspective"
+description: "KDD 2022 Tutorial <br/>
+Qingsong Wen, Linxiao Yang, Tian Zhou, and Liang Sun <br/>
+Alibaba DAMO Academy"
+
+
 theme: jekyll-theme-cayman
