--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 title: "Robust Time Series Analysis and Applications<br/>
 An Industrial Perspective"
-
-
 description: "KDD 2022 Tutorial <br/>
 Qingsong Wen, Linxiao Yang, Tian Zhou, and Liang Sun <br/>
 Alibaba DAMO Academy"
-
-
+header_text: KDD 2022 Tutorial
 theme: jekyll-theme-cayman
