--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: "Robust Time Series Analysis and Applications<br/>
 An Industrial Perspective"
 description: "KDD 2022 Tutorial <br/>
-Qingsong Wen, Linxiao Yang, Tian Zhou, and Liang Sun <br/>
-Alibaba DAMO Academy"
+Qingsong Wen, Linxiao Yang, Tian Zhou, and Liang Sun"
 header_text: KDD 2022 Tutorial
 theme: jekyll-theme-cayman
